--- a/Ansible-Arrayserver/roles/arrayserver/tasks/install_mono.yaml
+++ b/Ansible-Arrayserver/roles/arrayserver/tasks/install_mono.yaml
@@ -1,13 +1,13 @@
-#- name: Install epel repo
-#  command: amazon-linux-extras install epel
-#  become: yes
-#
-#- name: Install Linux packages
-#  yum:
-#    name: "{{ dev_tool_packages }}"
-#    state: latest
-#
-# Installing MONO
+- name: Install epel repo
+  command: amazon-linux-extras install epel
+  become: yes
+
+- name: Install Linux packages
+  yum:
+    name: "{{ dev_tool_packages }}"
+    state: latest
+
+ Installing MONO
 - name: Check for existing mono installation
   command: "{{ mono_cmd_path }}/mono --version"
   register: current_mono
