--- a/Ansible-Arrayserver/roles/arrayserver/tasks/install_mono.yaml
+++ b/Ansible-Arrayserver/roles/arrayserver/tasks/install_mono.yaml
@@ -1,16 +1,18 @@
-- name: Install epel repo
-  command: amazon-linux-extras install epel
-  become: yes
+#- name: Install epel repo
+#  command: amazon-linux-extras install epel
+#  become: yes
+#
+#- name: Install Linux packages
+#  yum:
+#    name: "{{ dev_tool_packages }}"
+#    state: latest
 
-- name: Install Linux packages
-  yum:
-    name: "{{ dev_tool_packages }}"
-    state: latest
-
- Installing MONO
+#Installing MONO
 - name: Check for existing mono installation
-  command: "{{ mono_cmd_path }}/mono --version"
+  command: "{{ mono_old_cmd_path }}/mono --version"
+  ignore_errors: true
   register: current_mono
+
 - name: Install Mono
   block:
   - name: ensure Mono downlaod dir {{mono_old_version}} exists
@@ -48,45 +50,48 @@
     args: 
       chdir: "{{ mono_old_install_dir }}"
     become: yes
-  when: "{{ mono_old_version }} not in current_mono.stdout"   
+  when: "mono_old_version|string not in current_mono.stdout" 
 
 
 # Installing Mono New version
-- name: ensure Mono downlaod dir {{mono_version}} exists
-  file:
-    path: "{{ mono_install_dir }}"
-    state: directory
-
-- name: Download Mono {{ mono_version }}
-  get_url:
-    url: http://download.mono-project.com/sources/mono/mono-{{mono_version}}.tar.xz
-    dest: "{{mono_install_dir}}/"
-
-- name: Unarchive Mono {{ mono_version }}
-  ansible.builtin.unarchive:
-    src: "{{ mono_install_dir }}.tar.xz"
-    dest: "{{ mono_install_dir }}"
-    creates: "{{ mono_install_dir }}/mono" 
-    extra_opts: [--strip-components=1]
-    owner: "{{ app_user_name }}"
-    group: "{{ app_group_name }}"     
-    remote_src: yes
-
-- name: Running ./configure for Mono
-  command: "./configure  --prefix={{ mono_install_dir }} --with-large-heap=yes --enable-big-arrays=yes >configure.log 2>&1"
-  args: 
-    chdir: "{{ mono_install_dir }}"
-
-- name: Running "make" for Mono
-  command: make >make.log- 2>&1
-  args: 
-    chdir: "{{ mono_install_dir }}"
-
-- name: Running "make install" for Mono
-  command: make install >makeinstall.log 2>&1
-  args: 
-    chdir: "{{ mono_install_dir }}"
-  become: yes
+- name: Mono {{ mono_version }} install
+  block:
+  - name: ensure Mono downlaod dir {{mono_version}} exists
+    file:
+      path: "{{ mono_install_dir }}"
+      state: directory
+  
+  - name: Download Mono {{ mono_version }}
+    get_url:
+      url: http://download.mono-project.com/sources/mono/mono-{{mono_version}}.tar.xz
+      dest: "{{mono_install_dir}}.tar.xz"
+  
+  - name: Unarchive Mono {{ mono_version }}
+    ansible.builtin.unarchive:
+      src: "{{ mono_install_dir }}.tar.xz"
+      dest: "{{ mono_install_dir }}"
+      creates: "{{ mono_install_dir }}/mono" 
+      extra_opts: [--strip-components=1]
+      owner: "{{ app_user_name }}"
+      group: "{{ app_group_name }}"     
+      remote_src: yes
+  
+  - name: Running ./configure for Mono
+    command: "./configure  --prefix={{ mono_install_dir }} --with-large-heap=yes --enable-big-arrays=yes"
+    args: 
+      chdir: "{{ mono_install_dir }}"
+  
+  - name: Running "make" for Mono
+    command: make 
+    args: 
+      chdir: "{{ mono_install_dir }}"
+  
+  - name: Running "make install" for Mono
+    command: make install
+    args: 
+      chdir: "{{ mono_install_dir }}"
+    become: yes
+  when: "mono_version|string not in current_mono.stdout" 
 
 - name: 'Add {{ mono_cmd_path }} if PATH does not exist'
   lineinfile:
