--- a/Ansible-Arrayserver/roles/arrayserver/tasks/install_arrayserver.yaml
+++ b/Ansible-Arrayserver/roles/arrayserver/tasks/install_arrayserver.yaml
@@ -11,12 +11,12 @@
 - name: Create arrayserver exe
   ansible.builtin.shell: |
     touch ArrayServerLinuxBeta.exe
-    {{ mono_old_cmd_path}}/mono ./OmicsoftUpdater.exe
+    {{ mono_cmd_path}}/mono ./OmicsoftUpdater.exe
   args: 
     chdir: "{{ arrayserver_install_dir }}"
 
 - name: Check ArrayServerLinuxBeta version
-  command: "{{ mono_old_cmd_path}}/mono ArrayServerLinuxBeta.exe --version"
+  command: "{{ mono_cmd_path}}/mono ArrayServerLinuxBeta.exe --version"
   args: 
     chdir: "{{ arrayserver_install_dir }}"
   register: arrayserver_ver_op
