--- a/Ansible-Arrayserver/roles/arrayserver/tasks/install_r.yaml
+++ b/Ansible-Arrayserver/roles/arrayserver/tasks/install_r.yaml
@@ -14,13 +14,25 @@
   command: amazon-linux-extras install R4
   become: yes
 
-- name: Install packages inside R shell
-  shell: |
-    sudo R
-    install.packages("tidyverse")
-    install.packages("BiocManager")
-    install.packages("Seurat")
-    BiocManager::install("DESeq2")
-    library(DESeq2)
-    library(Seurat)
+#########---------TODO--None of below not working-----#####
+- name: Install R packages
+  command: Rscript --vanilla -e "install.packages('plyr', repos=c('http://ftp.heanet.ie/mirrors/cran.r-project.org/'))"
+  tags: test
+
+- name: adding R packages
+  command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{item}}' %in% installed.packages()[,'Package'])) install.packages(pkgs={{item}}, repos=c('http://ftp.heanet.ie/mirrors/cran.r-project.org/'))"
+  with_items:
+    - tidyverse
+    - BiocManager
+    - Seurat
+  tags: test
+      #- name: Install packages inside R shell
+      #  shell: |
+      #    sudo R
+      #    install.packages("tidyverse")
+      #    install.packages("BiocManager")
+      #    install.packages("Seurat")
+      #    BiocManager::install("DESeq2")
+      #    library(DESeq2)
+      #    library(Seurat)
     
