--- a/Ansible-Arrayserver/roles/arrayserver/tasks/install_r.yaml
+++ b/Ansible-Arrayserver/roles/arrayserver/tasks/install_r.yaml
@@ -14,25 +14,32 @@
   command: amazon-linux-extras install R4
   become: yes
 
-#########---------TODO--None of below not working-----#####
-- name: Install R packages
-  command: Rscript --vanilla -e "install.packages('plyr', repos=c('http://ftp.heanet.ie/mirrors/cran.r-project.org/'))"
-  tags: test
-
-- name: adding R packages
-  command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{item}}' %in% installed.packages()[,'Package'])) install.packages(pkgs={{item}}, repos=c('http://ftp.heanet.ie/mirrors/cran.r-project.org/'))"
-  with_items:
+- name: Install r - packages
+  command: >-
+    Rscript --slave --no-save --no-restore-history -e "
+    if (! ('{{ item }}' %in% installed.packages()[,'Package'])) {
+      install.packages(pkgs='{{ item }}', repos=c('http://ftp.heanet.ie/mirrors/cran.r-project.org/'));
+      print('Added');
+    } else {
+      print('Already installed');
+    }"
+  register: r_result
+  failed_when: "r_result.rc != 0 or 'had non-zero exit status' in r_result.stderr"
+  changed_when: "'Added' in r_result.stdout"
+  loop:
     - tidyverse
     - BiocManager
     - Seurat
-  tags: test
-      #- name: Install packages inside R shell
-      #  shell: |
-      #    sudo R
-      #    install.packages("tidyverse")
-      #    install.packages("BiocManager")
-      #    install.packages("Seurat")
-      #    BiocManager::install("DESeq2")
-      #    library(DESeq2)
-      #    library(Seurat)
-    
+
+- name: Install BiocManager - r - packages
+  command: >-
+    Rscript --slave --no-save --no-restore-history -e "
+      if (! ('DESeq2' %in% installed.packages()[,'Package'])) {
+        BiocManager::install(pkgs='DESeq2');
+        print('Added');
+      } else {
+        print('Already installed');
+      }"
+  register: B_result
+  failed_when: "B_result.rc != 0 or 'had non-zero exit status' in B_result.stderr"
+  changed_when: "'Added' in B_result.stdout"
